--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,4 @@
 {
   "version": 2,
-  "framework": "nextjs",
-  "builds": [
-    { "src": "next.config.mjs", "use": "@vercel/next" }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/" }
-  ]
+  "framework": "nextjs"
 }
