--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.548.0",
     "next": "14.2.14",
     "react": "18.3.1",
     "react-dom": "18.3.1"
