--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "framer-motion": "^12.23.24",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.548.0",
+    "mongoose": "^8.19.2",
     "next": "14.2.14",
     "react": "18.3.1",
     "react-dom": "18.3.1"
