--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcryptjs": "^3.0.2",
     "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.548.0",
     "mongoose": "^8.19.2",
     "next": "14.2.14",
