--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "framer-motion": "^12.23.24",
+    "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.548.0",
+    "mongodb": "^6.20.0",
     "mongoose": "^8.19.2",
     "next": "14.2.14",
     "react": "18.3.1",
