--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "bcryptjs": "^3.0.2",
     "framer-motion": "^12.23.24",
     "imagekit": "^6.0.0",
