--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^8.19.2",
     "next": "14.2.14",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-onesignal": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
