--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@pusher/push-notifications-web": "^1.1.0",
     "@vercel/analytics": "^1.5.0",
     "bcryptjs": "^3.0.2",
+    "firebase": "^12.6.0",
     "framer-motion": "^12.23.24",
     "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
